# ai-sprint-action-planner

./: .gitignore  README.md  pyproject.toml
ai-sprint-action-planner/: scrum_sprint_planner.ipynb
src/ai-sprint-action-planner/: scrum_sprint_action_planner.ipynb
src/ai_sprint_action_planner/: 3-pro-scrum_sprint_action_planner.ipynb  Grok_SysProm_Scrum_Sprint_Action_Planner.ipynb  Grok_SysProm_Scrum_Sprint_Action_Planner_V2.ipynb  __init__.py  main.py  scrum_sprint_action_planner.ipynb
