[project]
name = "ai-sprint-action-planner"
version = "0.1.0"
description = "Weekly AI sprint action planner - Analyzes customer review comments, business partners review comments and competitors updates for task decisions in next sprint planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.53.0",
]

[project.scripts]
ai-sprint-planner = "ai_sprint_action_planner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sprint_action_planner"]
